--- a/views/gallery_add.ejs
+++ b/views/gallery_add.ejs
@@ -12,6 +12,9 @@
 						<input class="form-control" type="text" name="img" placeholder="Type picture link">
 					</div>
 					<div class="form-group">
+						<input class="form-control" type="text" name="description" placeholder="Type description">
+					</div>
+					<div class="form-group">
 						<input class="btn btn-default btn-block" type="submit" value="Save" style="border-radius: 0px;">
 					</div>
 				</form>
